Fix #1646, Update API doxygen list

--- a/docs/src/cfe_api.dox
+++ b/docs/src/cfe_api.dox
@@ -25,20 +25,29 @@
     <UL>
       <LI> #CFE_ES_GetResetType - \copybrief CFE_ES_GetResetType
       <LI> #CFE_ES_GetAppID - \copybrief CFE_ES_GetAppID
+      <LI> #CFE_ES_GetTaskID - \copybrief CFE_ES_GetTaskID
       <LI> #CFE_ES_GetAppIDByName - \copybrief CFE_ES_GetAppIDByName
+      <LI> #CFE_ES_GetLibIDByName - \copybrief CFE_ES_GetLibIDByName
       <LI> #CFE_ES_GetAppName - \copybrief CFE_ES_GetAppName
+      <LI> #CFE_ES_GetLibName - \copybrief CFE_ES_GetLibName
       <LI> #CFE_ES_GetAppInfo - \copybrief CFE_ES_GetAppInfo
       <LI> #CFE_ES_GetTaskInfo - \copybrief CFE_ES_GetTaskInfo
+      <LI> #CFE_ES_GetLibInfo - \copybrief CFE_ES_GetLibInfo
+      <LI> #CFE_ES_GetModuleInfo - \copybrief CFE_ES_GetModuleInfo
     </UL>
     <LI> \ref CFEAPIESChildTask
     <UL>
       <LI> #CFE_ES_CreateChildTask - \copybrief CFE_ES_CreateChildTask
+      <LI> #CFE_ES_GetTaskIDByName - \copybrief CFE_ES_GetTaskIDByName
+      <LI> #CFE_ES_GetTaskName - \copybrief CFE_ES_GetTaskName
       <LI> #CFE_ES_DeleteChildTask - \copybrief CFE_ES_DeleteChildTask
       <LI> #CFE_ES_ExitChildTask - \copybrief CFE_ES_ExitChildTask
     </UL>
     <LI> \ref CFEAPIESCritData
     <UL>
       <LI> #CFE_ES_RegisterCDS - \copybrief CFE_ES_RegisterCDS
+      <LI> #CFE_ES_GetCDSBlockIDByName - \copybrief CFE_ES_GetCDSBlockIDByName
+      <LI> #CFE_ES_GetCDSBlockName - \copybrief CFE_ES_GetCDSBlockName
       <LI> #CFE_ES_CopyToCDS - \copybrief CFE_ES_CopyToCDS
       <LI> #CFE_ES_RestoreFromCDS - \copybrief CFE_ES_RestoreFromCDS
     </UL>
@@ -47,6 +56,7 @@
       <LI> #CFE_ES_PoolCreate - \copybrief CFE_ES_PoolCreate
       <LI> #CFE_ES_PoolCreateEx - \copybrief CFE_ES_PoolCreateEx
       <LI> #CFE_ES_PoolCreateNoSem - \copybrief CFE_ES_PoolCreateNoSem
+      <LI> #CFE_ES_PoolDelete - \copybrief CFE_ES_PoolDelete
       <LI> #CFE_ES_GetPoolBuf - \copybrief CFE_ES_GetPoolBuf
       <LI> #CFE_ES_PutPoolBuf - \copybrief CFE_ES_PutPoolBuf
       <LI> #CFE_ES_GetMemPoolStats - \copybrief CFE_ES_GetMemPoolStats
@@ -66,12 +76,21 @@
       <LI> #CFE_ES_SetGenCount - \copybrief CFE_ES_SetGenCount
       <LI> #CFE_ES_GetGenCount - \copybrief CFE_ES_GetGenCount
       <LI> #CFE_ES_GetGenCounterIDByName - \copybrief CFE_ES_GetGenCounterIDByName
+      <LI> #CFE_ES_GetGenCounterName - \copybrief CFE_ES_GetGenCounterName
     </UL>
     <LI> \ref CFEAPIESMisc
     <UL>
+      <LI> #CFE_ES_BackgroundWakeup - \copybrief CFE_ES_BackgroundWakeup
       <LI> #CFE_ES_CalculateCRC - \copybrief CFE_ES_CalculateCRC
       <LI> #CFE_ES_WriteToSysLog - \copybrief CFE_ES_WriteToSysLog
       <LI> #CFE_ES_ProcessAsyncEvent - \copybrief CFE_ES_ProcessAsyncEvent
+    </UL>
+    <LI> \ref CFEAPIESResourceID
+    <UL>
+      <LI> #CFE_ES_AppID_ToIndex - \copybrief CFE_ES_AppID_ToIndex
+      <LI> #CFE_ES_LibID_ToIndex - \copybrief CFE_ES_LibID_ToIndex
+      <LI> #CFE_ES_TaskID_ToIndex - \copybrief CFE_ES_TaskID_ToIndex
+      <LI> #CFE_ES_CounterID_ToIndex - \copybrief CFE_ES_CounterID_ToIndex
     </UL>
   </UL>
 
@@ -105,16 +124,83 @@
     </UL>
     <LI> \ref CFEAPIFSUtil
     <UL>
+          <LI> #CFE_FS_GetDefaultMountPoint - \copybrief CFE_FS_GetDefaultMountPoint
+          <LI> #CFE_FS_GetDefaultExtension - \copybrief CFE_FS_GetDefaultExtension
+          <LI> #CFE_FS_ParseInputFileNameEx - \copybrief CFE_FS_ParseInputFileNameEx
+          <LI> #CFE_FS_ParseInputFileName - \copybrief CFE_FS_ParseInputFileName
 	  <LI> #CFE_FS_ExtractFilenameFromPath - \copybrief CFE_FS_ExtractFilenameFromPath
+          <LI> #CFE_FS_BackgroundFileDumpRequest - \copybrief CFE_FS_BackgroundFileDumpRequest
+          <LI> #CFE_FS_BackgroundFileDumpIsPending - \copybrief CFE_FS_BackgroundFileDumpIsPending
     </UL>
   </UL>
 
-  <H4> Software Bus API </H4>
+  <H4> Message API </H4>
+  <UL>
+    <LI> \ref CFEAPIMSGHeader
+    <UL>
+      <LI> #CFE_MSG_Init - \copybrief CFE_MSG_Init
+      <LI> #CFE_MSG_GetSize - \copybrief CFE_MSG_GetSize
+      <LI> #CFE_MSG_SetSize - \copybrief CFE_MSG_SetSize
+      <LI> #CFE_MSG_GetType - \copybrief CFE_MSG_GetType
+      <LI> #CFE_MSG_SetType - \copybrief CFE_MSG_SetType
+      <LI> #CFE_MSG_GetHeaderVersion - \copybrief CFE_MSG_GetHeaderVersion
+      <LI> #CFE_MSG_SetHeaderVersion - \copybrief CFE_MSG_SetHeaderVersion
+      <LI> #CFE_MSG_GetHasSecondaryHeader - \copybrief CFE_MSG_GetHasSecondaryHeader
+      <LI> #CFE_MSG_SetHasSecondaryHeader - \copybrief CFE_MSG_SetHasSecondaryHeader
+      <LI> #CFE_MSG_GetApId - \copybrief CFE_MSG_GetApId
+      <LI> #CFE_MSG_SetApId - \copybrief CFE_MSG_SetApId
+      <LI> #CFE_MSG_GetSegmentationFlag - \copybrief CFE_MSG_GetSegmentationFlag
+      <LI> #CFE_MSG_SetSegmentationFlag - \copybrief CFE_MSG_SetSegmentationFlag
+      <LI> #CFE_MSG_GetSequenceCount - \copybrief CFE_MSG_GetSequenceCount
+      <LI> #CFE_MSG_SetSequenceCount - \copybrief CFE_MSG_SetSequenceCount
+      <LI> #CFE_MSG_GetNextSequenceCount - \copybrief CFE_MSG_GetNextSequenceCount
+      <LI> #CFE_MSG_GetEDSVersion - \copybrief CFE_MSG_GetEDSVersion
+      <LI> #CFE_MSG_SetEDSVersion - \copybrief CFE_MSG_SetEDSVersion
+      <LI> #CFE_MSG_GetEndian - \copybrief CFE_MSG_GetEndian
+      <LI> #CFE_MSG_SetEndian - \copybrief CFE_MSG_SetEndian
+      <LI> #CFE_MSG_GetPlaybackFlag - \copybrief CFE_MSG_GetPlaybackFlag
+      <LI> #CFE_MSG_SetPlaybackFlag - \copybrief CFE_MSG_SetPlaybackFlag
+      <LI> #CFE_MSG_GetSubsystem - \copybrief CFE_MSG_GetSubsystem
+      <LI> #CFE_MSG_SetSubsystem - \copybrief CFE_MSG_SetSubsystem
+      <LI> #CFE_MSG_GetSystem - \copybrief CFE_MSG_GetSystem
+      <LI> #CFE_MSG_SetSystem - \copybrief CFE_MSG_SetSystem
+      <LI> #CFE_MSG_GenerateChecksum - \copybrief CFE_MSG_GenerateChecksum
+      <LI> #CFE_MSG_ValidateChecksum - \copybrief CFE_MSG_ValidateChecksum
+      <LI> #CFE_MSG_SetFcnCode - \copybrief CFE_MSG_SetFcnCode
+      <LI> #CFE_MSG_GetFcnCode - \copybrief CFE_MSG_GetFcnCode
+      <LI> #CFE_MSG_GetMsgTime - \copybrief CFE_MSG_GetMsgTime
+      <LI> #CFE_MSG_SetMsgTime - \copybrief CFE_MSG_SetMsgTime
+    </UL>
+    <LI> \ref CFEAPIMSGMsgId
+    <UL>
+      <LI> #CFE_MSG_GetMsgId - \copybrief CFE_MSG_GetMsgId
+      <LI> #CFE_MSG_SetMsgId - \copybrief CFE_MSG_SetMsgId
+      <LI> #CFE_MSG_GetTypeFromMsgId - \copybrief CFE_MSG_GetTypeFromMsgId
+    </UL>
+  </UL>
+
+  <H4> Resource ID API </H4>
+  <UL>
+    <LI> cFE Resource Misc APIs
+    <UL>
+      <LI> #CFE_ResourceId_ToInteger - \copybrief CFE_ResourceId_ToInteger
+      <LI> #CFE_ResourceId_FromInteger - \copybrief CFE_ResourceId_FromInteger
+      <LI> #CFE_ResourceId_Equal - \copybrief CFE_ResourceId_Equal
+      <LI> #CFE_ResourceId_IsDefined - \copybrief CFE_ResourceId_IsDefined
+      <LI> #CFE_ResourceId_GetBase - \copybrief CFE_ResourceId_GetBase
+      <LI> #CFE_ResourceId_GetSerial - \copybrief CFE_ResourceId_GetSerial
+      <LI> #CFE_ResourceId_FindNext - \copybrief CFE_ResourceId_FindNext
+      <LI> #CFE_ResourceId_ToIndex - \copybrief CFE_ResourceId_ToIndex
+    </UL>
+  </UL>
+
+  <H4> Software Bus Services API </H4>
   <UL>
     <LI> \ref CFEAPISBPipe
     <UL>
       <LI> #CFE_SB_CreatePipe - \copybrief CFE_SB_CreatePipe
       <LI> #CFE_SB_DeletePipe - \copybrief CFE_SB_DeletePipe
+      <LI> #CFE_SB_PipeId_ToIndex - \copybrief CFE_SB_PipeId_ToIndex
       <LI> #CFE_SB_SetPipeOpts - \copybrief CFE_SB_SetPipeOpts
       <LI> #CFE_SB_GetPipeOpts - \copybrief CFE_SB_GetPipeOpts
       <LI> #CFE_SB_GetPipeName - \copybrief CFE_SB_GetPipeName
@@ -141,29 +227,19 @@
     </UL>
     <LI> \ref CFEAPISBSetMessage
     <UL>
-      <LI> #CFE_MSG_Init - \copybrief CFE_MSG_Init
-      <LI> #CFE_MSG_SetMsgId - \copybrief CFE_MSG_SetMsgId
       <LI> #CFE_SB_SetUserDataLength - \copybrief CFE_SB_SetUserDataLength
-      <LI> #CFE_MSG_SetSize - \copybrief CFE_MSG_SetSize
-      <LI> #CFE_MSG_SetMsgTime - \copybrief CFE_MSG_SetMsgTime
       <LI> #CFE_SB_TimeStampMsg - \copybrief CFE_SB_TimeStampMsg
-      <LI> #CFE_MSG_SetFcnCode - \copybrief CFE_MSG_SetFcnCode
-      <LI> #CFE_MSG_SetSequenceCount - \copybrief CFE_MSG_SetSequenceCount
       <LI> #CFE_SB_MessageStringSet - \copybrief CFE_SB_MessageStringSet
     </UL>
     <LI> \ref CFEAPIGetMessage
     <UL>
       <LI> #CFE_SB_GetUserData - \copybrief CFE_SB_GetUserData
-      <LI> #CFE_MSG_GetMsgId - \copybrief CFE_MSG_GetMsgId
       <LI> #CFE_SB_GetUserDataLength - \copybrief CFE_SB_GetUserDataLength
-      <LI> #CFE_MSG_GetSize - \copybrief CFE_MSG_GetSize
-      <LI> #CFE_MSG_GetMsgTime - \copybrief CFE_MSG_GetMsgTime
-      <LI> #CFE_MSG_GetFcnCode - \copybrief CFE_MSG_GetFcnCode
-      <LI> #CFE_MSG_GetTypeFromMsgId - \copybrief CFE_MSG_GetTypeFromMsgId
       <LI> #CFE_SB_MessageStringGet - \copybrief CFE_SB_MessageStringGet
     </UL>
     <LI> \ref CFEAPISBMessageID
     <UL>
+      <LI> #CFE_SB_IsValidMsgId - \copybrief CFE_SB_IsValidMsgId
       <LI> #CFE_SB_MsgId_Equal - \copybrief CFE_SB_MsgId_Equal
       <LI> #CFE_SB_MsgIdToValue - \copybrief CFE_SB_MsgIdToValue
       <LI> #CFE_SB_ValueToMsgId - \copybrief CFE_SB_ValueToMsgId
